@@ -89,12 +89,14 @@ enum token_id {
     T_OR_ALT       = TOKEN_FROM_ID(260, OperatorTokenType|AltExtTokenType),
     T_OR_TRIGRAPH  = TOKEN_FROM_ID(260, OperatorTokenType|TriGraphTokenType),
     T_ORASSIGN     = TOKEN_FROM_ID(261, OperatorTokenType),
-    T_ORASSIGN_ALT      = TOKEN_FROM_ID(261, OperatorTokenType|AltExtTokenType),
+    T_ORASSIGN_ALT          = TOKEN_FROM_ID(261, OperatorTokenType|AltExtTokenType),
+    T_ORASSIGN_TRIGRAPH     = TOKEN_FROM_ID(261, OperatorTokenType|TriGraphTokenType),
     T_XOR          = TOKEN_FROM_ID(262, OperatorTokenType),
     T_XOR_ALT      = TOKEN_FROM_ID(262, OperatorTokenType|AltExtTokenType),
     T_XOR_TRIGRAPH = TOKEN_FROM_ID(262, OperatorTokenType|TriGraphTokenType),
     T_XORASSIGN    = TOKEN_FROM_ID(263, OperatorTokenType),
-    T_XORASSIGN_ALT     = TOKEN_FROM_ID(263, OperatorTokenType|AltExtTokenType),
+    T_XORASSIGN_ALT         = TOKEN_FROM_ID(263, OperatorTokenType|AltExtTokenType),
+    T_XORASSIGN_TRIGRAPH    = TOKEN_FROM_ID(263, OperatorTokenType|TriGraphTokenType),
     T_COMMA        = TOKEN_FROM_ID(264, OperatorTokenType),
     T_COLON        = TOKEN_FROM_ID(265, OperatorTokenType),
     T_DIVIDE       = TOKEN_FROM_ID(266, OperatorTokenType),
@@ -125,6 +127,7 @@ enum token_id {
     T_NOTEQUAL_ALT      = TOKEN_FROM_ID(285, OperatorTokenType|AltExtTokenType),
     T_OROR         = TOKEN_FROM_ID(286, OperatorTokenType),
     T_OROR_ALT     = TOKEN_FROM_ID(286, OperatorTokenType|AltExtTokenType),
+    T_OROR_TRIGRAPH     = TOKEN_FROM_ID(286, OperatorTokenType|TriGraphTokenType),
     T_PLUS         = TOKEN_FROM_ID(287, OperatorTokenType),
     T_PLUSASSIGN   = TOKEN_FROM_ID(288, OperatorTokenType),
     T_PLUSPLUS     = TOKEN_FROM_ID(289, OperatorTokenType),
